force-app/main/fat/objects/Trigger_Observer__mdt/Trigger_Observer__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Observer</label>
    <pluralLabel>Trigger Observers</pluralLabel>
</CustomObject>