force-app/main/fat/objects/Trigger_Observer__mdt/fields/After_Undelete__c.field-meta.xml
<CustomField>
    <fullName>After_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER UNDELETE</label>
    <type>Checkbox</type>
</CustomField>