force-app/main/fat/objects/Trigger_Observer__mdt/fields/After_Update__c.field-meta.xml
<CustomField>
    <fullName>After_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER UPDATE</label>
    <type>Checkbox</type>
</CustomField>