force-app/main/fat/objects/Trigger_Observer__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>