force-app/main/fat/objects/Trigger_Observer__mdt/fields/Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE INSERT</label>
    <type>Checkbox</type>
</CustomField>