force-app/main/fat/objects/Trigger_Observer__mdt/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE UPDATE</label>
    <type>Checkbox</type>
</CustomField>